force-app/main/default/objects/AH_UDC_WorkbookStep__c/AH_UDC_WorkbookStep__c.object-meta.xml
<CustomObject>
    <description>This object contains details of Workbook steps and sent Workbook steps.</description>
    <label>UDC Workbook Step</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Workbook Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UDC Workbook Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>