force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This determines if this step is enabled</description>
    <inlineHelpText>This determines if this step is enabled</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>