force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The form which this step uses</description>
    <inlineHelpText>The form which this step uses</inlineHelpText>
    <label>Form</label>
    <referenceTo>AH_UDC_Form__c</referenceTo>
    <relationshipLabel>UDC Workbook Steps</relationshipLabel>
    <relationshipName>Workbook_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>