force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/Help__c.field-meta.xml
<CustomField>
    <fullName>Help__c</fullName>
    <description>This is the Help content that will appear in the side bar when the step is shown</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the Help content that will appear in the side bar when the step is shown</inlineHelpText>
    <label>Help</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>