force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>The order of the steps</description>
    <inlineHelpText>The order of the steps</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>