force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/StepCompleted__c.field-meta.xml
<CustomField>
    <fullName>StepCompleted__c</fullName>
    <description>This designates when the step has been completed by the community user</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This designates when the step has been completed by the community user</inlineHelpText>
    <label>Step Completed</label>
    <type>DateTime</type>
</CustomField>