force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/StepCompletedBy__c.field-meta.xml
<CustomField>
    <fullName>StepCompletedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the experience user that completed the UDC Workbook Step.</description>
    <inlineHelpText>Identifies the experience user that completed the UDC Workbook Step.</inlineHelpText>
    <label>Step Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UDCWorkbookStepCompletedBy</relationshipName>
    <type>Lookup</type>
</CustomField>