force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/StepStatus__c.field-meta.xml
<CustomField>
    <fullName>StepStatus__c</fullName>
    <description>This shows the status of the step sent</description>
    <inlineHelpText>This shows the status of the step sent</inlineHelpText>
    <label>Step Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <color>#BBBBBB</color>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <color>#F3D904</color>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#419249</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Locked</fullName>
                <color>#FF6666</color>
                <label>Locked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>