force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>The External URL that will be shown for the step.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The External URL that will be shown for the step.</inlineHelpText>
    <label>External URL</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>