force-app/main/default/objects/AH_UDC_WorkbookStep__c/fields/Workbook__c.field-meta.xml
<CustomField>
    <fullName>Workbook__c</fullName>
    <description>This is the Workbook record to which the step is attached</description>
    <inlineHelpText>This is the Workbook record to which the step is attached</inlineHelpText>
    <label>Workbook</label>
    <referenceTo>AH_UDC_Workbook__c</referenceTo>
    <relationshipLabel>UDC Workbook Steps</relationshipLabel>
    <relationshipName>Workbook_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>