force-app/main/default/objects/AH_UDC_WorkbookStep__c/recordTypes/AH_UDC_WorkbookStep.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_WorkbookStep</fullName>
    <active>true</active>
    <description>Created to capture the steps in a Workbook</description>
    <label>Workbook Step</label>
</RecordType>