force-app/main/default/objects/AH_UDC_WorkbookStep__c/recordTypes/AH_UDC_WorkbookStepSent.recordType-meta.xml
<RecordType>
    <fullName>AH_UDC_WorkbookStepSent</fullName>
    <active>true</active>
    <description>Created to capture the steps in a Workbook sent.</description>
    <label>Workbook Step Sent</label>
</RecordType>