force-app/main/default/objects/AH_UDC_WorkbookStep__c/validationRules/UDC_PrerequisiteStepCannotBeSameStep.validationRule-meta.xml
<ValidationRule>
    <fullName>UDC_PrerequisiteStepCannotBeSameStep</fullName>
    <active>true</active>
    <description>Prevents users from selecting the current workbook step as a prerequisite</description>
    <errorConditionFormula>AND(
NOT ISBLANK(Prerequisite_Step__c),
Prerequisite_Step__r.Id =  Id
)</errorConditionFormula>
    <errorMessage>A workbook step&apos;s prerequisite cannot be itself.</errorMessage>
</ValidationRule>