force-app/main/default/objects/AH_UDC_WorkbookStep__c/validationRules/UDC_PrerequisiteStepMustBeOnSameWorkbook.validationRule-meta.xml
<ValidationRule>
    <fullName>UDC_PrerequisiteStepMustBeOnSameWorkbook</fullName>
    <active>true</active>
    <description>This validation ensures that the Prerequisite Step is part of the same workbook.</description>
    <errorConditionFormula>not(
OR(Prerequisite_Step__r.Workbook__c = Workbook__c,   
   Prerequisite_Step__c = null)
)</errorConditionFormula>
    <errorDisplayField>Prerequisite_Step__c</errorDisplayField>
    <errorMessage>The prerequisite step must be part of the current workbook.</errorMessage>
</ValidationRule>